feat: Implement comprehensive session management, including entities, services, controllers, DTOs, and foundational security configurations.